<resources>
    <string name="app_name">MyGroupRoom</string>
    <string name="simple_chat">Simple Chat</string>
    <string name="aa">Aa</string>
    <string name="settings">Settings</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="status">Status</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>

    <string name="welcome_back">Welcome Back</string>
    <string name="create_account">Create Account</string>

    <string name="new_user">New user ?</string>
    <string name="already_user">Already User ?</string>
    <string name="confirm">Confirm</string>
    <string name="choose_language">Choose Language</string>
</resources>